[package]
name = "altos_core"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]

[lib]
crate-type = ["rlib"]

[features]
default = []

bump_alloc = ["bump_allocator"]
free_list_alloc = ["free_list_allocator"]
default_alloc = []
cm0 = []
test = []
syscall = []

[dependencies]
bump_allocator = { path = "libs/heap/bump_allocator", optional = true }
free_list_allocator = { path = "libs/heap/free_list_allocator", optional = true }
volatile = { path = "../libs/volatile" }
altos-macros = { path = "libs/altos-macros" }

[target.thumbv6m-none-eabi.dependencies]
cm0_atomic = { path = "libs/cm0_atomic" }
