[package]
name = "volatile-ptr"
version = "0.1.1"
documentation = "https://docs.rs/volatile-ptr"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]
description = "Implementation of volatile pointers for I/O device access"
repository = "https://github.com/AltOS-Rust/volatile"
keywords = ["volatile", "pointer", "embedded", "hardware", "memory"]
categories = ["embedded", "hardware-support", "memory-management", "no-std", "os"]
license = "GPL-3.0"

[lib]
crate-type = ["rlib"]

[dependencies]
