[package]
name = "cortex_m0"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]

[lib]
crate-type = ["rlib"]

[features]
default = []

doc = []
serial = []

#[dev-dependencies]
#volatile = { path = "../../libs/volatile" }
[dev-dependencies.altos_core]
path = "../../altos-core"
features = ["test"]

[dependencies]
#compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
arm = { path = "libs/arm" }
altos-macros = { path = "../../altos-core/libs/altos-macros" }

[dependencies.altos_core]
path = "../../altos-core"
features = ["bump_allocator", "cm0"]
#optional = true

#[dependencies.compiler_builtins]
#git = "https://github.com/rust-lang-nursery/compiler-builtins"
