[package]
name = "cortex_m0"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]

[lib]
crate-type = ["rlib"]

[features]
default = []

doc = []
serial = []
minicom = ["serial"]
svc = ["altos_core/syscall"]

[dev-dependencies.altos_core]
path = "../../altos-core"
features = ["test"]

[dependencies]
#compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
arm = { path = "libs/arm" }
altos-macros = { path = "../../altos-core/libs/altos-macros" }

[dependencies.altos_core]
path = "../../altos-core"
features = ["free_list_allocator", "cm0"]

#[dependencies.compiler_builtins]
#git = "https://github.com/rust-lang-nursery/compiler-builtins"
